<resources>
    <string name="app_name">Developer Challenge</string>
    <string name="auto_complete_text_view">Search by Name</string>
    <string name="project_sNo">Project sNo</string>
    <string name="project_name">Project Name</string>
    <string name="project_backers">Project Backers</string>
    <string name="project_pleadge">Project Pleadge</string>
    <string name="example_text">Example Text</string>
    <string name="example_string">Example String</string>
    <string name="lbl_blurb">Blurb</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_state">State</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
