<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/system_notification_accent_color"
            android:text="@string/project_name"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/project_pleadge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/system_notification_accent_color"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:text="@string/project_pleadge" />

        <TextView
            android:id="@+id/project_backers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/system_notification_accent_color"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:text="@string/project_backers" />

        <TextView
            android:id="@+id/project_sNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/system_notification_accent_color"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:text="@string/project_sNo" />
    </LinearLayout>

</androidx.cardview.widget.CardView>