<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data_detail"
            type="com.example.lastversion.models.ProjectsModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsFragment">

        <TextView
            android:id="@+id/detail_tv_lbl_blurb"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/lbl_blurb"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/detail_tv_blurb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/detail_tv_lbl_location"/>

        <TextView
            android:id="@+id/detail_tv_blurb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="30dp"
            android:textStyle="italic"
            android:text="@{data_detail.blurb}"
            app:layout_constraintBottom_toBottomOf="@id/detail_tv_lbl_blurb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detail_tv_lbl_blurb"
            app:layout_constraintTop_toTopOf="@id/detail_tv_lbl_blurb"
            tools:text="@string/example_string" />

        <TextView
            android:id="@+id/detail_tv_lbl_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_location"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/detail_tv_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_lbl_blurb"
            app:layout_constraintBottom_toTopOf="@id/detail_tv_lbl_state"/>

        <TextView
            android:id="@+id/detail_tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textStyle="italic"
            android:text="@{data_detail.location}"
            app:layout_constraintBottom_toBottomOf="@id/detail_tv_lbl_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detail_tv_lbl_location"
            app:layout_constraintTop_toTopOf="@id/detail_tv_lbl_location"
            tools:text="Istanbul" />

        <TextView
            android:id="@+id/detail_tv_lbl_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_state"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/detail_tv_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_lbl_location"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/detail_tv_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/detail_tv_lbl_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detail_tv_lbl_state"
            app:layout_constraintTop_toTopOf="@id/detail_tv_lbl_state"
            android:text="@{data_detail.state}"
            tools:text="DE" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

